--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div style="width:100%;height:100%;" id="root"></div>
+    <div style="width:100%;height:100%;position:relative;" id="root"></div>
 </body>
 
 </html>
